dataplane/bookinfo/services/bases/common/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: patch-me
  namespace: bookinfo


# Header Routing
#
#  http:
#    - match:
#        - headers:
#            end-user:
#              exact: Bill
#      route:
#        - destination:
#            host: reviews
#            subset: v2
#    - match:
#        - headers:
#            end-user:
#              exact: Fred
#      route:
#        - destination:
#            host: reviews
#            subset: v3
#    - route:
#        - destination:
#            host: reviews
#            subset: v1
